# AdventureScript

./: .gitignore  Cargo.toml  Changelog.md  README.md  errors.txt  icon.ase  mkdocs.yml  test.as2  test.asf
.github/workflows/: linux.yml  mac.yml  rust.yml  windows.yml
adventure_script_attr/: Cargo.toml
adventure_script_attr/src/: command.rs  lib.rs  util.rs
docs/: cfgfile.md  commands.md  index.md  requirements.txt  start.md
src/: commands.rs  config.rs  error.rs  info.rs  io.rs  lib.rs  macros.rs  main.rs  parsing.rs  save.rs  tests.rs  variables.rs
src/core/: commands.rs  error.rs  info.rs  io.rs  methods.rs  mod.rs  specialization_hack.rs  variables.rs
src/core/commands/: definitions.rs  mod.rs
src/core/variables/: is_as_var.rs  mod.rs  operations.rs
src/formats/: config.rs  mod.rs  save.rs
src/modules/: inventory.rs  mod.rs
src/parsing/: evaluate.rs  mod.rs  tests.rs
src/tests/: setup.rs  simplify.rs
test_game/: info.toml  other.as2  start.as2
test_game/script/: other.as2  start.as2
