[package]
name = "adventure_script"
version = "2.0.0-alpha.2"
authors = ["patataofcourse"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dirs = "4.0.0"
regex = "1.5.4"
semver = "1.0.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.59"
thiserror = "1.0.30"
toml = "0.5.8"